--- a/frontend/src/components/PodcastEpisodeCard/PodcastEpisodeCard.css
+++ b/frontend/src/components/PodcastEpisodeCard/PodcastEpisodeCard.css
@@ -12,6 +12,7 @@
   margin-bottom: 0;
   font-weight: bold;
   font-size: 1.1rem;
+  text-wrap: wrap;
 }
 .podcast-episode-card-title.active-link:hover {
   text-decoration: underline;
